--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,6 @@
 		</dependency>
 		<dependency>
 		<groupId>com.vimalselvam</groupId>
-
 		<artifactId>testng-extentsreport</artifactId>
 		<version>1.3.1</version>
 		</dependency>
@@ -58,7 +57,15 @@
 		<version>6.14.3</version>
 		<scope>compile</scope>
 	</dependency>
-
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
 
 	</dependencies>
 
