--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+test.url=http://localhost:8866
+dev.url=http://localhost:8866
+getCookies.url=/getCookies
+test.get.with.cookies=/get/with/cookies
+test.post.with.cookies=/post/with/cookies
+login=/login
 
