--- a/baogao/src/main/resources/application.properties
+++ b/baogao/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# jdbc_config   datasource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://47.110.116.179:3306/qianxu-dev?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&verifyServerCertificate=false&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/jianshu?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+spring.datasource.username=root
+#spring.datasource.password=36yes58no!@#
+spring.datasource.password=123456789
 
+mybatis.type-aliases-package=com.example.demo.pojo
+mybatis.mapper-locations=classpath:mapper/*.xml
+# \u901a\u7528 Mapper \u914d\u7f6e
+mapper.mappers=com.example.demo.utils.MyMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
+
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
